# tensorweaver

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
milestones/01_linear_regression/: demo.ipynb
milestones/02_onnx_export/: demo.ipynb  model.onnx
milestones/03_multilayer_perceptron/: demo.ipynb
src/tensorweaver/: __init__.py
src/tensorweaver/autodiff/: function.py  helpers.py  tensor.py  topological_sort.py
src/tensorweaver/autograd/: __init__.py
src/tensorweaver/layers/: multihead_attention.py
src/tensorweaver/nn/: __init__.py
src/tensorweaver/onnx/: onnx_program.py
src/tensorweaver/operators/: argmax.py  cat.py  cross_entropy.py  dropout.py  embedding.py  eq.py  faltten.py  gelu.py  getitem.py  layer_norm.py  log_softmax.py  lt.py  masked_fill.py  matmul.py  max.py  mean.py  mul.py  multinomial.py  nll_loss.py  permute.py  pow.py  power.py  relu.py  reshape.py  sin.py  softmax.py  sum.py  sum_to.py  tanh.py  topk.py  tril.py  unsqueeze.py  view.py  view_as.py
src/tensorweaver/optim/: __init__.py
src/tensorweaver/tensor_create/: ones.py  randint.py  zeros.py
src/tensorweaver/utils/data/: data_loader.py  tensor_dataset.py
tests/autodiff/: test_topological_sort.py  test_variable.py
tests/layers/: test_embedding.py  test_linear.py  test_multihead_attention.py
tests/onnx/: test_export.py
tests/operators/: test_add.py  test_broadcast_to.py  test_dropout.py  test_embedding.py  test_exp.py  test_flatten.py  test_gelu.py  test_layer_norm.py  test_log_softmax.py  test_matmul.py  test_max.py  test_mean.py  test_mul.py  test_neg.py  test_power.py  test_relu.py  test_reshape.py  test_sigmoid.py  test_softmax.py  test_sqrt.py  test_sum.py  test_tanh.py  test_transpose.py  test_tril.py  test_unsqueeze.py  test_view.py
tests/tensor_create/: test_randint.py
tests/utils/data/: test_data_loading.py
