[project]
name = "tensorweaver"
version = "0.1.0"
description = "A modern educational deep learning framework for students, engineers and researchers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Xiaoquan Kong", email = "u1mail2me@gmail.com" }]
keywords = ["deep-learning", "neural-network", "framework", "educational", "tensor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "onnx>=1.17.0,<2.0.0",
    "typeguard>=4.4.2,<5.0.0",
]
requires-python = ">=3.9,<3.13"

[project.urls]
Homepage = "https://github.com/howl-anderson/tensorweaver"
Repository = "https://github.com/howl-anderson/tensorweaver"
Issues = "https://github.com/howl-anderson/tensorweaver/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tensorweaver"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "pytest-cov>=6.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "onnxruntime>=1.17.0",
    "psutil>=6.1.1",
    "objsize>=0.7.1",
    "memory-profiler>=0.61.0",
    "ipykernel>=6.29.5",
]
demo = [
    "matplotlib>=3.8.0",
    "datasets>=2.18.0",
    "requests>=2.31.0",
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]